workloads/external-dns/manifest/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
    app.kubernetes.io/component: external-dns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
      app.kubernetes.io/component: external-dns
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns
        app.kubernetes.io/component: external-dns
        cluster.local/allow-apiserver-egress: "true"
    spec:
      containers:
      - name: external-dns
        args:
        - --source=service
        - --source=ingress
        - --provider=coredns
        securityContext:
          runAsNonRoot: true
          runAsUser: 65534
          readOnlyRootFilesystem: true
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            memory: 40Mi
            cpu: 10m
          limits:
            memory: 250Mi
            cpu: 100m
